--- a/public/offline.html
+++ b/public/offline.html
@@ -11,9 +11,9 @@
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.indigo-pink.min.css">
   <link rel="stylesheet" href="/src/css/app.css">
-  <link rel="stylesheet" href="/src/css/feed.css">
   <link rel="manifest" href="/manifest.json">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+
+  <meta name="apple-mobile-web-app-capable" content="yes">rel=""
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="PWAGram">
   <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-57x57.png" sizes="57x57">
@@ -28,6 +28,7 @@
   <meta name="msapplication-TileImage" content="/src/images/icons/app-icon-144x144.png">
   <meta name="msapplication-TileColor" content="#fff">
   <meta name="theme-color" content="#3f51b5">
+
 </head>
 <body>
 
@@ -64,46 +65,9 @@
       </nav>
     </div>
     <main class="mdl-layout__content mat-typography">
-      <div id="create-post">
-        <form>
-          <div class="input-section mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" type="text" id="title">
-            <label class="mdl-textfield__label" for="title" name="title">Title</label>
-          </div>
-          <div class="input-section mdl-textfield mdl-js-textfield mdl-textfield--floating-label" id="manual-location">
-            <input class="mdl-textfield__input" type="text" id="location">
-            <label class="mdl-textfield__label" for="location" name="location">Location</label>
-          </div>
-          <br>
-          <div>
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-color--accent"
-                    type="submit" id="post-btn">Post!
-            </button>
-          </div>
-          <br>
-          <div>
-            <button class="mdl-button mdl-js-button mdl-button--fab" id="close-create-post-modal-btn" type="button">
-              <i class="material-icons">close</i>
-            </button>
-          </div>
-        </form>
-      </div>
-      <img src="/src/images/main-image.jpg"
-           alt="Explore the City"
-           class="main-image">
       <div class="page-content">
-        <h5 class="text-center mdl-color-text--primary">Share your Moments</h5>
-        <div id="shared-moments"></div>
-      </div>
-      <div class="floating-button">
-        <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored"
-                id="share-image-button">
-          <i class="material-icons">add</i>
-        </button>
-      </div>
-      <div id="confirmation-toast" aria-live="assertive" aria-atomic="true" aria-relevant="text" class="mdl-snackbar mdl-js-snackbar">
-        <div class="mdl-snackbar__text"></div>
-        <button type="button" class="mdl-snackbar__action"></button>
+        <h5 class="text-center mdl-color-text--primary">We're sorry, this page has not been cached</h5>
+        <p>But why don't you try one of the <a href="/">other pages</a></p>
       </div>
     </main>
   </div>
@@ -111,9 +75,6 @@
 <script defer src="/src/js/material.min.js"></script>
 <script src="/src/js/promise.js"></script>
 <script src="/src/js/fetch.js"></script>
-<script src="/src/js/idb.js"></script>
-<script src="/src/js/utility.js"></script>
 <script src="/src/js/app.js"></script>
-<script src="/src/js/feed.js"></script>
 </body>
 </html>
